RESOLVED FIXED73935
[Qt] Fix page overlay rendering with AC.
https://bugs.webkit.org/show_bug.cgi?id=73935
Summary [Qt] Fix page overlay rendering with AC.
Jocelyn Turcotte
Reported 2011-12-06 10:47:46 PST
[Qt] Fix page overlay rendering with AC.
Attachments
Patch (1.64 KB, patch)
2011-12-06 10:49 PST, Jocelyn Turcotte
no flags
Jocelyn Turcotte
Comment 1 2011-12-06 10:49:29 PST
Jocelyn Turcotte
Comment 2 2011-12-06 11:26:44 PST
Comment on attachment 118072 [details] Patch Clearing flags on attachment: 118072 Committed r102156: <http://trac.webkit.org/changeset/102156>
Jocelyn Turcotte
Comment 3 2011-12-06 11:26:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.