[Qt] Fix page overlay rendering with AC. https://bugs.webkit.org/show_bug.cgi?id=73935

Reviewed by Noam Rosenthal.

The inspector node highlight would display old highlights as well
since the overlay is normally rendered right after the page on top
of the same graphics context.

* WebProcess/WebPage/qt/LayerTreeHostQt.cpp:
(WebKit::LayerTreeHostQt::paintContents):

Canonical link: https://commits.webkit.org/90603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102156 268f45cc-cd09-0410-ab3c-d52691b4dbfc